# OpenGL

./: CMakeLists.txt  README.md
headers/Renderer/: Renderer.hpp  VAO.hpp  VBO.hpp  Window.hpp
headers/Shaders/: Shader.hpp
headers/Utils/: Logger.hpp
libs/headers/glad/: glad.h
libs/src/glad/: glad.c
shaders/: fragmentShader.frag  vertexShader.vert
src/: Main.cpp
src/Renderer/: Renderer.cpp  VAO.cpp  VBO.cpp  Window.cpp
src/Shaders/: Shader.cpp
src/Utils/: Logger.cpp
